--- a/readme.org
+++ b/readme.org
@@ -4,15 +4,18 @@
 #+STARTUP: indent
 
 
-* Pypy
-** Install pypy using ubuntu repo
+* hompho
+antara hom dan pho
+* backend story
+** pypy
+*** Install pypy using ubuntu repo
 #+BEGIN_SRC sh
   sudo add-apt-repository ppa:pypy/ppa
   sudo apt-get update
   sudo apt-get install pypy pypy-dev
 #+END_SRC
-** Create virtualenv with pypy
-*** Using pypy tarball
+*** Create virtualenv with pypy
+**** Using pypy tarball
 First, download and extract pypy-2.x tarball, from
 
 [[http://pypy.org/download.html]]
@@ -24,10 +27,11 @@ I'm using x86-64 binary. Then, run these code:
   . bin/activate
   pip install -r requirements.txt
 #+END_SRC
-*** Using pypy repo (system wide)
+**** Using pypy repo (system wide)
 #+BEGIN_SRC sh
   virtualenv -p /usr/bin/pypy venv_name
   . bin/activate
   pip install -r requirements.txt
 #+END_SRC
+** tornado web server
 
