--- a/readme.org
+++ b/readme.org
@@ -8,6 +8,7 @@
 antara "hom" dan "pho"
 * backend story
 ** pypy
+pertama kali nyoba pake pypy
 *** Install pypy using ubuntu repo
 #+BEGIN_SRC sh
   sudo add-apt-repository ppa:pypy/ppa
@@ -34,4 +35,5 @@ I'm using x86-64 binary. Then, run these code:
   pip install -r requirements.txt
 #+END_SRC
 ** tornado web server
+nyoba tornado for production
 
