--- a/readme.org
+++ b/readme.org
@@ -6,7 +6,7 @@
 
 * hompho
 Instead of regular cpython, this Flask app use pypy. Reason? Don't ask
-me why, the main reason is for fun and for nothing!.
+me why, the two main reason are for fun and for nothing!.
 * backend story
 ** pypy
 pertama kali nyoba pake pypy[fn:1]
