adding some [more] description

--- a/readme.org
+++ b/readme.org
@@ -4,9 +4,12 @@
 #+STARTUP: indent
 
 
-* hompho
+* What?
 Instead of regular python, this Flask app use pypy. Reason? Don't ask
 me why, the two main reason are for fun and for nothing!.
+
+Using google api images, I'm trying to query and process the data
+within the admin dashboard.
 * backend story
 ** pypy
 pertama kali nyoba pake pypy[fn:1]
